--- a/.gitattributes
+++ b/.gitattributes
@@ -9,7 +9,6 @@
 *.prefab merge=unityyamlmerge eol=lf
 *.physicsMaterial2D merge=unityyamlmerge eol=lf
 *.physicMaterial merge=unityyamlmerge eol=lf
-*.asset merge=unityyamlmerge eol=lf
 *.meta merge=unityyamlmerge eol=lf
 *.controller merge=unityyamlmerge eol=lf
 ## git-lfs ##
@@ -49,3 +48,6 @@
 *.hdr filter=lfs diff=lfs merge=lfs -text
 *.assets filter=lfs diff=lfs merge=lfs -text
 *.assets.resS filter=lfs diff=lfs merge=lfs -text
+
+# ПРАВИЛО ДЛЯ ТЕРРЕЙНА И ДРУГИХ БИНАРНЫХ АССЕТОВ
+*.asset filter=lfs diff=lfs merge=lfs -text
